--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
-    url: jdbc:mariadb://127.0.0.1:3306/hello?useUnicode=true&characterEncoding=utf8&autoReconnect=true&serverTimezone=Asia/Seoul
-    username: imhope
+    url: jdbc:mariadb://172.17.0.1:3306/hello?useUnicode=true&characterEncoding=utf8&autoReconnect=true&serverTimezone=Asia/Seoul
+    username: lldjlocal
     password: 0987
   jpa:
     hibernate:
